<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <VideoView
        android:id="@+id/btn_video1"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_retroceder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/retroceder1"
            android:contentDescription="@string/btnplay"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/pausa"
            android:contentDescription="@string/btnpausa"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/btn_stop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/play"
            android:contentDescription="@string/btnplay"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/btn_detener"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/detener"
            android:contentDescription="@string/btndetener"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/btn_adelantar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/adelantar"
            android:contentDescription="@string/adelantar"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:layout_margin="10dp"/>
    </LinearLayout>
</LinearLayout>
