<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/aitana_morat"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/play"
            android:contentDescription="@string/btnplay"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/pausa"
            android:contentDescription="@string/btnplay"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/btn_stop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/detener"
            android:contentDescription="@string/btndetener"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/regresar" />

</LinearLayout>
